--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.mysql-connector-java-8.0.17.jar=/home/samundra-sage/Downloads/mysql-connector-java-8.0.17.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=/home/samundra-sage/.netbeans/8.0.2/build.properties
