--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.jar=${dist.dir}/MCQ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.47.jar=/home/samundra-sage/Downloads/mysql-connector-java-5.1.47.jar
+file.reference.hamcrest-core-1.3.jar=/home/samundra-sage/Downloads/hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=/home/samundra-sage/Downloads/junit-4.12.jar
 file.reference.mysql-connector-java-8.0.17.jar=/home/samundra-sage/Downloads/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
